Fix long overlapping text on smaller screens

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -252,11 +252,6 @@ li.social-link a {
   .nav {
     display: none;
   }
-
-  a.logo,
-  .shares {
-    width: auto;
-  }
 }
 
 @media (max-width: 840px) {
